syntax = "proto3";

package kos.kclip;

import "kos/actuator.proto";
import "kos/imu.proto";

message KClipHeader {
    string uuid = 1;
    string action = 2;
    uint64 start_timestamp = 3;
    uint64 end_timestamp = 4;
    repeated ActuatorMapping actuator_mappings = 5;
}

message KClipFrame {
    uint64 video_timestamp = 1;
    uint64 frame_number = 2;
    uint64 inference_step = 3;
    repeated kos.actuator.ActuatorStateResponse actuator_states = 4;
    optional kos.actuator.CommandActuatorsRequest actuator_commands = 5;
    optional kos.imu.IMUValuesResponse imu_values = 6;
}

message ActuatorMapping {
    uint32 actuator_id = 1;
    string actuator_name = 2;
}
